--- a/FirstCompletePrototype/Software/AltimeterBLE/Application/src/main/res/layout/pre_flight.xml
+++ b/FirstCompletePrototype/Software/AltimeterBLE/Application/src/main/res/layout/pre_flight.xml
@@ -29,7 +29,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/label_device_name"
+            android:text="@string/label_device_address"
             android:textSize="24sp"/>
 
         <Space
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"/>
 
         <TextView
-            android:id="@+id/device_name"
+            android:id="@+id/device_address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="24sp"
@@ -123,6 +123,76 @@
             android:textSize="50sp"
             android:id="@+id/post_flight" />
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp">
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/button_set"
+            android:textSize="50sp"
+            android:id="@+id/button_set" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:id="@+id/settings"
+        android:visibility="invisible">
+
+        <Space
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/set_2_apogee"
+            android:textSize="24sp"/>
+
+        <EditText android:id="@+id/edit_apogee"
+            android:inputType="number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="@string/edit_2apogee_message"/>
+
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/button_send"
+            android:onClick="sendApogee" />
+
+        <Space
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"/>
+<!--
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/set_pressure"
+            android:textSize="24sp"/>
+
+        <EditText android:id="@+id/edit_pressure"
+            android:inputType="number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="@string/edit_SLP_message"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/button_send"
+            android:onClick="sendPressure" />
+-->
     </LinearLayout>
 
 </LinearLayout>
